--- a/contactinfo.html
+++ b/contactinfo.html
@@ -12,11 +12,14 @@
         <li>Email@gmail.com</li>
         <li>(123)456-7890</li>
     </ul>
-    <form action="">
+    <hr>
+    <form action="mailto:info@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
-        <input type="text" name="" id=""><br>
-        <label>Password:</label>
-        <input type="password" name="" id="">
+        <input type="text" name="yourName" id=""><br>
+        <label>Your Email:</label>
+        <input type="email" name="yourEmail" id=""><br>
+        <label >Your Message:</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit" name="">
     </form>
 
