--- a/contactinfo.html
+++ b/contactinfo.html
@@ -13,7 +13,7 @@
         <li>(123)456-7890</li>
     </ul>
     <hr>
-    <form action="mailto:info@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:bar401538@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName" id=""><br>
         <label>Your Email:</label>
